- fix bug 114519

BUG: 114519

svn path=/trunk/extragear/libs/kipi-plugins/; revision=527546